# orchestration

./: .editorconfig  .env.backup  .env.backup.pre-commit  .env.example  .env.local  .gitignore  .tmp-pr57-merge-watch.txt  AGENTS.md  CURRENT_SERVICE_STATUS.md  EVENING_PLAN_REPORT_2026-03-17.md  GEMINI.md  HANDOFF_TO_CODER_WORKSPACE.md  LICENSE  MANUAL.html  MANUAL.md  MANUAL_KINDLE.md  README.md  REFACTORING_SUMMARY_2026-03-17.md  SECURITY.md  SECURITY_AUDIT_FINAL.md  SETUP.md  TEST_SUMMARY.md  TEST_SUMMARY_UPDATE.md  TRAE_SETUP.md  blackbox_mcp_settings.json  conftest.py  docker-compose.mega.yml  docker-compose.vault.yml  docker-compose.yml  docker-compose.yml.bak  gemini-speak.skill  mkdocs.yml  package-lock.json  package.json  process_prs.sh  process_prs_dependabot.sh  process_prs_final.sh  process_prs_gh_actions.sh  pyproject.toml  pytest.ini  (+7 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.vercel/: repo.json
api/: orchestrator.py
docs/: 8.md  (+19 more)
services/vault-secrets-ui/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  services.json  vault_webui.html
services/vault-secrets-ui/src/vault_secrets_ui/: __init__.py  advanced_memory.py  app_factory.py  config.py  field_validation.py  models.py  runtime.py  ui.py  vault.py
services/vault-secrets-ui/src/vault_secrets_ui/templates/: vault_webui.html
services/vault-secrets-ui/tests/: conftest.py  playwright_smoke.mjs  test_advanced_memory_api.py  test_app.py  test_config.py  test_field_validation.py  test_runtime.py  test_shell_quote.py  test_ui.py  test_vault.py
(+509 files in other folders)
