[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vault-secrets-ui"
version = "2.0.0"
description = "Reusable Vault-backed secrets UI with retro key-first workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "uvicorn==0.30.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vault_secrets_ui"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src",
]
